kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2022-10-30T20:33:59Z"
  generation: 2
  labels:
    app: gke-frontend
  name: gke-frontend
  namespace: default
  resourceVersion: "198765"
  uid: 3c2becc1-35b2-47e3-9f71-084113a630b3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gke-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gke-frontend
    spec:
      containers:
      - image: gcr.io/gkeproject-366909/landingpage:c277d90526150702a3086cf28a12e3cf201e3175
        imagePullPolicy: IfNotPresent
        name: frontend
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-10-30T20:34:00Z"
    lastUpdateTime: "2022-10-30T20:34:00Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-10-30T20:33:59Z"
    lastUpdateTime: "2022-10-30T20:55:00Z"
    message: ReplicaSet "gke-frontend-79f798d97d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
