kubernetes/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: <IMAGE>
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 200m
        

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
  selector:
    app: frontend
    
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landingpage-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: paymax.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 3000
  - host: www.paymax.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 3000
